# PhysicalTherapyGame

./: .gitignore  HOW_WE_BUILT_THIS.md  PhysioHero.spec  README.md  main.py  make_template.py  pyproject.toml  run_game.py
game/: run_game.py
game/components/: camera.py  exercise.py  game_state.py  pose.py
game/core/: audio_manager.py  exercise_loader.py  game_session.py  mediapipe_manager.py  mediapipe_thread.py  navigation.py  paths.py  spritesheet.py
game/data/: exercise_groups.json
game/scenes/: base_scene.py  exercise_select_scene.py  game_scene.py  how_to_play_scene.py  level_select_scene.py  main_menu_scene.py
game/systems/: angle_system.py  camera_system.py  game_system.py  pose_system.py  render_system.py  rep_system.py
game/ui/: animations.py  completion_screen.py  demo_video_player.py  dynamic_camera.py  game_hud.py  hero.py  jungle_minigame.py  level_card_menu.py  paint_effects.py  particles.py  persona.py  persona_menu.py  platformer.py  shapes.py  swimming_minigame.py  theme.py  webcam_view.py
tests/: claude_prototype.py
tools/: pose_tracker.py
training_data/: clap.npz  clap.npz.json  lateral_hip_thrust.npz  lateral_hip_thrust.npz.json  lateral_lunge.npz  lateral_lunge.npz.json  lateral_raise.npz  lateral_raise.npz.json  parallel_arm_raise.npz  right_lunge.npz  right_lunge.npz.json  right_side_bend.npz  right_side_bend.npz.json  squat_rep.npz  squat_rep.npz.json  toe_touch.npz  toe_touch.npz.json
training_data/videos/: clap.mov  lateral_hip_thrust.mov  lateral_lunge.mov  lateral_raise.mov  parallel_arm_raise.mov  right_lunge.mov  (+3 more)
